Version 1.0
http://svn.edgewall.org/repos/babel/tags/1.0.0/
(???, from branches/stable/1.0.x)

 * Added support for the locale plural rules defined by the CLDR.
 * Added `format_timedelta` function to support localized formatting of
   relative times with strings such as "2 days" or "1 month" (ticket #126).
 * Fixed Python 2.3 compatibility (ticket #146).


Version 0.9.4
http://svn.edgewall.org/repos/babel/tags/0.9.4/
(Aug 25 2008, from branches/stable/0.9.x)

 * Currency symbol definitions that is defined with choice patterns in the
   CLDR data are no longer imported, so the symbol code will be used instead.
 * Fixed quarter support in date formatting.
 * Fixed a serious memory leak that was introduces by the support for CLDR
   aliases in 0.9.3 (ticket #128).
 * Locale modifiers such as "@euro" are now stripped from locale identifiers
   when parsing (ticket #136).
 * The system locales "C" and "POSIX" are now treated as aliases for
   "en_US_POSIX", for which the CLDR provides the appropriate data. Thanks to
   Manlio Perillo for the suggestion.
 * Fixed JavaScript extraction for regular expression literals (ticket #138)
   and concatenated strings.
 * The `Translation` class in `babel.support` can now manage catalogs with
   different message domains, and exposes the family of `d*gettext` functions
   (ticket #137).


Version 0.9.3
http://svn.edgewall.org/repos/babel/tags/0.9.3/
(Jul 9 2008, from branches/stable/0.9.x)

 * Fixed invalid message extraction methods causing an UnboundLocalError.
 * Extraction method specification can now use a dot instead of the colon to
   separate module and function name (ticket #105).
 * Fixed message catalog compilation for locales with more than two plural
   forms (ticket #95).
 * Fixed compilation of message catalogs for locales with more than two plural
   forms where the translations were empty (ticket #97).
 * The stripping of the comment tags in comments is optional now and
   is done for each line in a comment.